Fix syntax error

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Add specified repos and update apt index
   apt_repository:
-    repo: '{ item }}'
+    repo: '{{ item }}'
     state: present
     update_cache: yes
   with_items: '{{ elasticsearch_apt_repos }}'
